--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "debounce": "^1.2.1",
     "feather-icons": "^4.28.0",
     "split-grid": "^1.0.11",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.4",
+    "tippy.js": "^6.3.1"
   }
 }
