--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lookbook",
   "version": "0.1.0",
+  "private": true,
   "description": "Supercharge your ViewComponent development",
   "pre-commit": [
     "build"
