--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
       "publish": false
     },
     "hooks": {
-      "after:bump": "echo \"module Lookbook\\n\\tVERSION = '${version//v/$''}'\\nend\" > ./lib/lookbook/version.rb"
+      "after:version:bump": "rake lookbook:release:bump_version\\[#{version}]"
     }
   }
 }
