--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
       "publish": false
     },
     "hooks": {
+      "after:bump": "npm run build",
       "after:version:bump": "rake 'lookbook:release:bump_version[${version}]' && bundle"
     }
   }
