--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "hooks": {
       "before:init": "bundle install",
       "after:bump": "npm run build",
-      "after:version:bump": "rake 'lookbook:release:bump_version[${version}]' && bundle"
+      "after:version:bump": "rake 'lookbook:release:bump_version[${version}]' && bundle",
+      "after:release": "rake build && gem push pkg/lookbook-${version}.gem"
     }
   }
 }
