--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lookbook",
-  "version": "0.3.4",
+  "version": "0.4.0-beta.0",
   "private": true,
   "description": "A native development UI for ViewComponent",
   "scripts": {
