--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
       "before:init": "bundle install",
       "after:bump": "npm run build",
       "after:version:bump": "rake 'lookbook:release:bump_version[${version}]' && bundle",
-      "after:release": "rake build && gem push pkg/lookbook-${version}.gem"
+      "after:release": "rake 'lookbook:release:build_and_push'"
     }
   }
 }
