--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
   "author": "Mark Perkins",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.3.7",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "parcel": "^2.0.1",
+    "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "prettier": "2.3.2",
-    "release-it": "^14.11.6"
+    "release-it": "^14.11.6",
+    "tailwindcss": "^3.0.6"
   },
   "dependencies": {
     "@alpinejs/morph": "^3.5.2",
@@ -41,12 +45,9 @@
     "@github/hotkey": "^1.6.0",
     "@rails/actioncable": "^6.1.4",
     "@ryangjchandler/alpine-tooltip": "^0.1.2",
-    "@tailwindcss/forms": "^0.3.4",
-    "@tailwindcss/typography": "^0.4.1",
     "alpinejs": "^3.5.2",
     "debounce": "^1.2.1",
     "split-grid": "^1.0.11",
-    "tailwindcss": "^2.2.17",
     "tippy.js": "^6.3.2"
   },
   "release-it": {
