--- a/package.json
+++ b/package.json
@@ -61,7 +61,10 @@
       "publish": false
     },
     "hooks": {
-      "before:init": "bundle install",
+      "before:init": [
+        "bundle install",
+        "rake test"
+      ],
       "after:bump": "npm run build",
       "after:version:bump": "rake 'lookbook:release:bump_version[${version}]' && bundle",
       "after:release": "rake 'lookbook:release:build_and_push'"
