--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "tippy.js": "^6.3.2"
   },
   "devDependencies": {
+    "@prettier/plugin-ruby": "^3.1.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
