--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lookbook",
-  "version": "0.8.2",
+  "version": "1.0.0-beta.0",
   "description": "A native development UI for ViewComponent",
   "targets": {
     "app": {
