Work on basic docs theme and structure

--- a/docs/bridgetown.config.yml
+++ b/docs/bridgetown.config.yml
@@ -17,8 +17,7 @@
 url: "" # the base hostname & protocol for your site, e.g. https://example.com
 
 permalink: pretty
-template_engine: erb
-
+template_engine: serbea
 # Other options you might want to investigate:
 #
 # base_path: "/" # the subpath of your site, e.g. /blog. If you set this option,
