--- a/docs/package.json
+++ b/docs/package.json
@@ -7,12 +7,14 @@
     "esbuild-dev": "node esbuild.config.js --watch"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "esbuild": "^0.13.15",
     "glob": "^7.2.0",
     "postcss": "^8.4.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.2",
     "postcss-load-config": "^3.1.0",
-    "postcss-preset-env": "^7.0.1"
+    "postcss-preset-env": "^7.0.1",
+    "tailwindcss": "^3.1.4"
   }
 }
