More docs theme building

--- a/docs/src/_data/external.yml
+++ b/docs/src/_data/external.yml
@@ -1,4 +1,5 @@
 demo:
+  repo: https://github.com/allmarkedup/lookbook-demo
   url: https://lookbook-demo-app-v1-0-beta.herokuapp.com/lookbook
 lookbook:
   github:
