--- a/docs/src/_data/config_options.yml
+++ b/docs/src/_data/config_options.yml
@@ -16,7 +16,7 @@
 - name: debug_menu
   group: debugging
   type: Boolean
-  default: "`Rails.env.development?`"
+  default: Rails.env.development?
   example: "config.lookbook.debug_menu = false # always hide the debug menu"
   description: Whether or not to show the debug menu in the Lookbook header.
 
@@ -31,7 +31,11 @@
   group: previews
   type: Hash
   default: "{}"
-  example: "config.lookbook.preview_display_params = { bg_color: '#fff', max_width: '100%' }"
+  example: |
+    config.lookbook.preview_display_params = {
+      bg_color: "#fff",
+      max_width: "100%"
+    }
   description: Default (fallback) display params that will be merged with any preview-specific display params and made available in the preview layout template.
 
 - name: sort_examples
@@ -39,10 +43,15 @@
   type: Boolean
   default: false
   example: "config.lookbook.sort_examples = true"
-  description: >
+  description: |
     Whether or not to sort preview examples in the navigation alphabetically
     (as opposed to displaying them in the order they are defined in the preview class).
 
+- name: page_paths
+  group: pages
+  type: Array
+  example: config.lookbook.page_paths = ["path/to/my/pages"]
+  description: Array of additional directory paths that Lookbook should look for pages in.
 
 - name: page_route
   group: pages
@@ -51,36 +60,33 @@
   example: config.lookbook.page_route = "docs"
   description: The URL segment used to prefix page routes.
 
-- name: page_paths
-  group: pages
-  type: Array
-  example: config.lookbook.page_paths = ["path/to/my/pages"]
-  description: Array of additional directory paths that Lookbook should look for pages in.
-
 - name: page_options
   group: pages
   type: Hash
   default: "{}"
-  example: "config.lookbook.page_options = {
-    footer: false,
-    data: {
-      brand_colors: {
-        red: \"#ff0000\"
+  example: |
+    config.lookbook.page_options = {
+      footer: false,
+      data: {
+        brand_colors: {
+          red: "#ff0000"
+        }
       }
     }
-  }"
-  description: "Frontmatter defaults for pages.\n\n
+  description: |
+    Frontmatter defaults for pages.
     These will be merged with any page-level frontmatter data. Options set in the frontmatter
     will override those set at the global level (apart from 'data', which will be deep-merged
-    with the any globally defined data)."
+    with the any globally defined data).
 
 - name: markdown_options
   group: rendering
   type: Hash
   default: "{}"
-  example: 'config.lookbook.markdown_options = {
-    autolink: true
-  }'
+  example: |
+    config.lookbook.markdown_options = {
+      autolink: true
+    }
   description: Redcarpet markdown options to override Lookbook's default settings.
 
 
@@ -95,9 +101,10 @@
   group: ui
   type: Hash
   default: "{}"
-  example: "config.lookbook.ui_theme_overrides = {
-    header: \"hotpink\"
-  }"
+  example: |
+    config.lookbook.ui_theme_overrides = {
+      header: "hotpink"
+    }
   description: For overriding theme CSS variables with custom values.
 
 - name: auto_refresh
@@ -111,7 +118,7 @@
 - name: listen
   group: system
   type: Boolean
-  default: "`Rails.env.development?`"
+  default: Rails.env.development?
   example: config.lookbook.listen = false
   description: Whether or not Lookbook should listen for changes to files.
 
@@ -119,7 +126,7 @@
   group: system
   type: Array
   example: config.lookbook.listen_paths = ["directory/to/watch"]
-  description: >
+  description: |
     Specify additional directories to listen for changes in.
     Component, preview and pages directories are always watched.
 
@@ -127,7 +134,7 @@
   group: system
   type: Array
   example: config.lookbook.listen_extensions = ["js", "css"]
-  description: > 
+  description: | 
     Specify additional extensions for file types that should be watched for changes.
     Files with **.rb** and **.html.*** extensions are always watched.
 
@@ -136,7 +143,7 @@
   type: Boolean
   default: false
   example: config.lookbook.listen_use_polling = true
-  description: >
+  description: |
     Whether or not to use polling when listening for file changes.
     Polling is slower but may work in certain setups where file listeners
     do not detect changes correctly.
@@ -144,9 +151,9 @@
 - name: runtime_parsing
   group: system
   type: Boolean
-  default: "`!Rails.env.production?`"
+  default: "!Rails.env.production?"
   example: "config.lookbook.runtime_parsing = false"
-  description: > 
+  description: | 
     Whether or not to perform an initial parse of the preview files when the application first starts. 
     Disabled in production by default.
 
