--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
+    "got": ">=11.8.5",
     "parcel": "^2.0.1",
+    "parse-path": ">=5.0.0",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "prettier": "2.3.2",
-    "release-it": "^14.11.6",
+    "release-it": "^15.4.0",
     "tailwindcss": "^3.0.6"
   },
   "dependencies": {
