--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -28,4 +28,4 @@ gem "bridgetown", "~> 1.0.0"
 # (you can optionally limit this to the "development" group)
 gem "puma", "~> 5.6"
 
-gem "bridgetown-view-component", "~> 1.0", :group => :bridgetown_plugins
+gem "bridgetown-view-component", "~> 1.0", group: :bridgetown_plugins
