--- a/package.json
+++ b/package.json
@@ -93,7 +93,10 @@
         "bundle install",
         "rake test"
       ],
-      "after:bump": "npm run build",
+      "after:bump": [
+        "npm run lint:fix",
+        "npm run build"
+      ],
       "after:version:bump": "rake 'lookbook:release:bump_version[${version}]' && bundle",
       "after:release": "rake 'lookbook:release:build_and_push'"
     }
