--- a/docs/src/_data/page_helpers.yml
+++ b/docs/src/_data/page_helpers.yml
@@ -1,17 +1,17 @@
 - name: page_path
+  purpose: Returns the path to a page.
   example_lang: erb
   args:
     - name: <page>
       type: Symbol | Page
       description: The page to generate a path to. Can be a page `id` (`Symbol`) or a `Page` object instance. Page `id`s can be specified in the [YAML frontmatter](/guide/pages/frontmatter) for that page.
-  signature: "page_path <page>"
+  signature: page_path(<page>)
   example: |
     Visit the [about page](<%= page_path :about %>)
     Go to the [next page](<%= page_path @next_page %>)
-  description: |
-    Returns the path to a page.
 
 - name: embed
+  purpose: Generates a live embed of a component preview.
   example_lang: erb
   args:
     - name: <preview>
@@ -23,7 +23,7 @@
     - name: <opts?>
       type: Hash
       description: Optional hash of options, including for specifying params.
-  signature: "embed <preview>, <example>, <opts?>"
+  signature: "embed(<preview>, <example>, <opts?>)"
   example: |
     <!-- Basic embed -->
     <%= embed Elements:ButtonComponentPreview, :default %>
@@ -34,15 +34,16 @@
       text: "Add new"
     } %>
   description: |
-    Generates a live embed of a component preview. See the [docs on embedding previews](/guide/pages/embedding) for more info.
+    See the [docs on embedding previews](/guide/pages/embedding) for more info.
 
 - name: code
+  purpose: Adds syntax highlighting to blocks of code.
   example_lang: erb
   args:
     - name: <lang?>
       type: Symbol
       description: The language the code is written in. Defaults to `:ruby`
-  signature: "code <lang?> { <block_content> }"
+  signature: "code(<lang?>) { <block_content> }"
   example: |
     <!-- Highlight Ruby code -->
     <%= code do %>
@@ -54,4 +55,5 @@
       <!-- HTML code to highlight goes here -->
     <% end %>
   description: |
-    Helper to add syntax highlighting to blocks of code. An alternative to using markdown code blocks for templates that have markdown parsing disabled or for when more control is required.
+    The `code` helper is an alternative to using markdown code blocks for
+    templates that have markdown parsing disabled, or for when more control is required.
