--- a/docs/src/_data/panel_variables.yml
+++ b/docs/src/_data/panel_variables.yml
@@ -8,38 +8,11 @@
     The **resolved** [panel options](#panel-options) object (see above for details)
 
 - name: preview
-  methods:
-    - name: id
-      description: Unique reference ID
-    - name: label
-      description: Preview label, as used in the navigation
-    - name: full_path
-      description: Full filesystem path to the preview class file
-    - name: url_path
-      description: URL of the preview in Lookbook
+  description: A [preview object](/api/entities/preview/) representing the current preview.
   example: |
     <h2>This is the <%= preview.label %> preview</h2>
-  description: |
-    An object representing the current preview.
 
 - name: examples
-  methods:
-    - name: example.output
-      description: The rendered preview example output
-    - name: example.source
-      description: The example source code (String)
-    - name: example.source_lang
-      description: Hash of information about the source language (Ruby or HTML/ERB, depending on whether the example uses a preview template)
-    - name: example.tags(:tag_name)
-      description: Array of tag objects for any `@tag_name` tags added to the example method
-    - name: example.id
-      description: ...
-    - name: example.label
-      description: ...
-    - name: example.full_path
-      description: ...
-    - name: example.url_path
-      description: ...
   example: |
     <p>This preview is showing <%= examples.size %> examples rendered together.</p>
     <p>Here is the source code for each example:</p>
@@ -49,9 +22,8 @@
       <div>
     <% end %>
   description: |
-    An array of objects representing the individual examples being rendered in the current preview. For **non-grouped** (i.e. regular) **previews**, this array will always **only have one item**.
-
-    Each example object in the array has the following properties:
+    An array of [preview example objects](/api/entities/preview_example/) representing the individual
+    examples rendered in the current preview. For **non-grouped** (i.e. regular) **previews**, this array will always **only have one item**.
 
 - name: context
   methods:
@@ -73,9 +45,9 @@
 - name: app
   methods:
     - name: previews
-      description: Collection of all preview objects
+      description: Array of all preview objects
     - name: pages
-      description: Collection of all page objects
+      description: Array of all page objects
     - name: logger
       description: Lookbook logger instance
   example: |
