Fix release test command

--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
       "before:init": [
         "npm install",
         "bundle install",
-        "rake test"
+        "rake spec"
       ],
       "after:bump": [
         "npm run lint:fix",
