--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
         "npm run lint:fix",
         "npm run build"
       ],
-      "after:version:bump": "rake 'lookbook:release:bump_version[${version}]' && bundle",
-      "after:release": "rake 'lookbook:release:build_and_push'"
+      "after:version:bump": "./bin/bump-version ${version} && bundle",
+      "after:release": "./bin/release ${version}"
     }
   }
 }
