--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,7 @@
     "postcss-preset-env": "^7.0.1"
   },
   "dependencies": {
+    "@hotwired/turbo": "^7.1.0",
     "@tailwindcss/typography": "^0.5.2",
     "alpinejs": "^3.10.2",
     "tailwindcss": "^3.1.4"
