--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,14 +30,22 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby_version }}
 
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Set up Chrome
+        uses: browser-actions/setup-chrome@latest
+        with:
+          chrome-version: stable
 
-      - uses: nanasess/setup-chromedriver@v1
-      - run: |
-          google-chrome --version
+      - name: Download chrome driver
+        uses: nanasess/setup-chromedriver@master
+
+      - name: Launch chrome driver
+        run: |
           export DISPLAY=:99
           chromedriver --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - uses: actions/cache@v2
         with:
